@@ -93,6 +93,11 @@ public class DAGClientImpl extends DAGClient {
             conf.getBoolean(TezConfiguration.TEZ_AM_HISTORY_LOGGING_ENABLED,
                  TezConfiguration.TEZ_AM_HISTORY_LOGGING_ENABLED_DEFAULT);
 
+    if (UserGroupInformation.isSecurityEnabled()){
+      //TODO: enable ATS integration in kerberos secured cluster - see TEZ-1529
+      isATSEnabled = false;
+    }
+
     realClient = new DAGClientRPCImpl(appId, dagId, conf, this.frameworkClient);
     statusPollInterval = conf.getLong(
         TezConfiguration.TEZ_DAG_STATUS_POLLINTERVAL_MS,
