@@ -13,7 +13,6 @@ INCOMPATIBLE CHANGES
 ALL CHANGES:
   TEZ-2445. Disable the object cleanup in local mode in LogicalIOProcessorRuntimeTask.
   TEZ-2057. tez-dag/pom.xml contains versions for dependencies.
-  TEZ-1529. ATS and TezClient integration in secure kerberos enabled cluster.
   TEZ-2435. Add public key to KEYS
   TEZ-2421. Deadlock in AM because attempt and vertex locking each other out
   TEZ-2426. Ensure the eventRouter thread completes before switching to a new task and thread safety fixes in IPOContexts.
@@ -184,9 +183,12 @@ Release 0.6.1: Unreleased
 INCOMPATIBLE CHANGES
 
 ALL CHANGES:
+<<<<<<< HEAD
   TEZ-2057. tez-dag/pom.xml contains versions for dependencies.
   TEZ-2282. Delimit reused yarn container logs (stderr, stdout, syslog) with task attempt start/stop events
   TEZ-1529. ATS and TezClient integration in secure kerberos enabled cluster.
+=======
+>>>>>>> parent of f0b9d7e... TEZ-1529. ATS and TezClient integration in secure kerberos enabled cluster. (Prakash Ramachandran via hitesh)
   TEZ-2396. pig-tez-tfile-parser pom is hard coded to depend on 0.6.0-SNAPSHOT version.
   TEZ-2237. Valid events should be sent out when an Output is not started.
   TEZ-1988. Tez UI: does not work when using file:// in a browser
@@ -363,7 +365,6 @@ TEZ-UI CHANGES (TEZ-8):
 Release 0.5.4: Unreleased
 
 ALL CHANGES:
-  TEZ-1529. ATS and TezClient integration in secure kerberos enabled cluster.
   TEZ-2369. Add a few unit tests for RootInputInitializerManager.
   TEZ-2379. org.apache.hadoop.yarn.state.InvalidStateTransitonException:
     Invalid event: T_ATTEMPT_KILLED at KILLED.
